[package]
name = "api-in-rust"
version = "0.1.0"
authors = ["George MacKay-Shore <george.mackay-shore@and.digital>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = "1.0.115"
serde_json = "1.0.57"
serde_derive = "1.0.115"
